--- a/csharp/device/Microsoft.Azure.Devices.Client.WinRT/project.json
+++ b/csharp/device/Microsoft.Azure.Devices.Client.WinRT/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Newtonsoft.Json": "6.0.8"
+    "Newtonsoft.Json": "6.0.8",
+    "PCLCrypto": "1.1.86-beta"
   },
   "frameworks": {
     "uap10.0": {}
